--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 
     <title>Generic Auth | By Carine Todmia</title>
 
-    <script type="text/javascript" src="https://cdn.auth0.com/js/lock/10.2/lock.min.js"></script>
+    <script type="text/javascript" src="//cdn.auth0.com/js/lock/10.2/lock.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <base href="/#">
 </head>
 <body ng-init="hello= 'hello world!'">
-	
-	<h1>{{hello}}</h1>
-
 	<toolbar></toolbar>
 	
 	<div layout-padding>
@@ -32,12 +30,16 @@
 	<script src="node_modules/angular-animate/angular-animate.js"></script>
 	<script src="node_modules/angular-material/angular-material.js"></script>
 	<script src="node_modules/angular-aria/angular-aria.js"></script>
+	<script src="node_modules/auth0-angular/build/auth0-angular.js"></script>
+	<script src="node_modules/angular-lock/dist/angular-lock.js"></script>
 	<script src="node_modules/angular-jwt/dist/angular-jwt.js"></script>
-	<script src="node_modules/angular-storage/dist/angular-storage.js"></script><script src="node_modules/auth0-angular/build/auth0-angular.js"></script>
+	<script src="node_modules/angular-storage/dist/angular-storage.js"></script>
 	<script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 
 
-	<script src="app.js"></script>	
+	<script src="app.js"></script>
+	<script src="app.run.js"></script>	
+	<script src="components/auth/auth.service.js"></script>
 	<script src="components/toolbar/toolbar.dir.js"></script>
 	<script src="components/profile/profile.ctr.js"></script>
 </body>
